--- a/phylogene_app/templates/phylEntropy/links.html
+++ b/phylogene_app/templates/phylEntropy/links.html
@@ -32,7 +32,7 @@
             <h1 >Links</h1>
         - NGphylogeny : <a href="https://ngphylogeny.fr/" target="_blank">https://ngphylogeny.fr/</a>
             <br>
-        - cripscasfinder : <a href="https://crisprcas.i2bc.paris-saclay.fr/" target="_blank">https://crisprcas.i2bc.paris-saclay.fr/</a>
+        - PHILOVIZ : <a href="https://www.philoviz.net/" target="_blank">https://www.philoviz.net/</a>
             <br>
         - GrapeTree : <a href="https://github.com/achtman-lab/GrapeTree" target="_blank">https://github.com/achtman-lab/GrapeTree</a>
             <br>
