--- a/phylogene_app/templates/phylEntropy/navbar.html
+++ b/phylogene_app/templates/phylEntropy/navbar.html
@@ -16,7 +16,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'phylogene_import' %}"><i class='fa fa-cog'></i> Analysis</a>
+                <a class="nav-link" style="color: red" href="{% url 'phylogene_import' %}"><i class='fa fa-cog'></i> Analysis</a>
             </li>
 
             <li class="nav-item">
@@ -42,7 +42,7 @@
                             <i class="fa fa-user"></i> {{user.username}}
                       </a>
                       <a class="nav-item nav-link" href="{% url 'logout' %}">
-                            <i class="fa fa-log-in"></i> Log out
+                            <i class="fa fa-sign-out"></i> Log out
                       </a>
                   </div>
               {% else %}
