{% include 'footer.html' %}

--- a/phylogene_app/templates/phylEntropy/credits.html
+++ b/phylogene_app/templates/phylEntropy/credits.html
@@ -33,6 +33,8 @@
                     <p><b>Validation &amp; Development:</b> <a>Davy REGALADE</a>, <a href="mailto:dcazenave@pasteur-guadeloupe.fr">Damien CAZENAVE</a> &amp <a>Vincent MOCO</a> </p>
         </div><br/>
     </div>
+        {% include 'phylEntropy/footer.html' %}
+
 </div>
 
 
