--- a/phylogene_app/templates/phylEntropy/links.html
+++ b/phylogene_app/templates/phylEntropy/links.html
@@ -47,8 +47,12 @@
         - Scikit-learn : <a href="https://scikit-learn.org/stable/" target="_blank">https://scikit-learn.org/stable/</a>
             <br>
         - RAWGraphs : <a href="https://www.rawgraphs.io/" target="_blank">https://www.rawgraphs.io/</a>
+        <br>
+        - Clustvis : <a href="https://biit.cs.ut.ee/clutvis/" target="_blank">https://biit.cs.ut.ee/clutvis/</a>
         </p>
     </div>
+        {% include 'phylEntropy/footer.html' %}
+
 </div>
 
 
