--- a/phylogene_app/templates/phylEntropy/intro.html
+++ b/phylogene_app/templates/phylEntropy/intro.html
@@ -3,7 +3,7 @@
     {% load static %}
     <head>
         {% block head %}
-        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+        <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1, charset=utf-8">
         <link rel="shortcut icon" href="../../static/img/karubionet2favicon.png" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -125,9 +125,12 @@
                         <div class="wrimagecard wrimagecard-topimage" style="text-align:center;">
                             <a href="{% url 'phylogene_import' %}">
                                 <div class="wrimagecard-topimage_header" style="background-color:rgb(50,130,255,0.1);">
-                                    <img style="width:100%;" src="../../static/img/analysis.jpeg">
-                                    <h3>Genomics, Graps, Metrics, etc...</h3>
+                                    <img style="width:100%;" src="../../static/img/analyse-des-donnees.png">
+                                    <h4>Genomics, Graphs, Metrics, etc...</h4>
                                 </div>
+{% comment %}
+                                <a href="https://www.flaticon.com/fr/icones-gratuites/lanalyse-des-donnees" title="l'analyse des donnees icones">L'analyse des donnees icones creees par smashingstocks - Flaticon</a>
+{% endcomment %}
                                 <div class="wrimagecard-topimage_title">
                                     <h2>Analysis</h2>
                                 </div>
@@ -141,10 +144,16 @@
                             <a href="https://github.com/dcazenav/PhylEntropy">
                                 <div class="wrimagecard-topimage_header" style="background-color:rgb(50,130,255,0.1);">
                                     <div style="text-align: center;">
-                                        <img style="width:60%;" src="../../static/img/tuto.jpeg">
+                                        <img style="width:100%;" src="../../static/img/mode-demploi.png">
                                     </div>
                                     <h4>All you need to know on how to use phylEntropy!</h4>
                                 </div>
+{% comment %}
+                                <a href="https://www.flaticon.com/fr/icones-gratuites/service-clients" title="service clients icones">Service clients icones creees par Freepik - Flaticon</a>
+
+                                pour mode d'emploi
+                                <a href="https://www.flaticon.com/fr/icones-gratuites/manuel" title="manuel icones">Manuel icones creees par Freepik - Flaticon</a>
+{% endcomment %}
                                 <div class="wrimagecard-topimage_title">
                                     <h2>Tutorial</h2>
                                     <div class="pull-right badge" id="WrControls"></div>
