--- a/phylogene_app/templates/phylEntropy/base.html
+++ b/phylogene_app/templates/phylEntropy/base.html
@@ -15,7 +15,9 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.datatables.net/v/dt/dt-1.10.13/se-1.2.0/datatables.min.css">
   <link rel="stylesheet" href="../../static/css/bootstrap.min.css">
+{% comment %}
   <link rel="stylesheet" href="../static/css/phylotree.css">
+{% endcomment %}
 
 
   {% endblock %}
