--- a/phylogene_app/templates/phylEntropy/footer.html
+++ b/phylogene_app/templates/phylEntropy/footer.html
@@ -13,7 +13,7 @@
                 <a href="http://www.univ-ag.fr/" target="_blank">
                     <img src="../../static/img/logo_uag.jpeg" alt="logo_uag" width="70" height="55" border="0">
                 </a>&nbsp;
-                <a href="https://www.djangoproject.com/" target="_blank">
+                <a href="http://web.pasteur-guadeloupe.fr/" target="_blank">
                     <img src="../../static/img/logo_ipg.png" alt="logo_pasteur" width="70" height="45" border="0">
                 </a>&nbsp;
                 </div>
