--- a/phylogene_app/templates/phylEntropy/links.html
+++ b/phylogene_app/templates/phylEntropy/links.html
@@ -48,7 +48,7 @@
             <br>
         - RAWGraphs : <a href="https://www.rawgraphs.io/" target="_blank">https://www.rawgraphs.io/</a>
         <br>
-        - Clustvis : <a href="https://biit.cs.ut.ee/clutvis/" target="_blank">https://biit.cs.ut.ee/clutvis/</a>
+        - Clustvis : <a href="https://biit.cs.ut.ee/clustvis/" target="_blank">https://biit.cs.ut.ee/clutvis/</a>
         </p>
     </div>
         {% include 'phylEntropy/footer.html' %}
