--- a/phylogene_app/templates/phylEntropy/intro.html
+++ b/phylogene_app/templates/phylEntropy/intro.html
@@ -130,12 +130,26 @@
                                 <a href="https://www.flaticon.com/fr/icones-gratuites/lanalyse-des-donnees" title="l'analyse des donnees icones">L'analyse des donnees icones creees par smashingstocks - Flaticon</a>
 {% endcomment %}
                                 <div class="wrimagecard-topimage_title">
-                                    <h2>Analysis</h2>
+                                    <h2 style="overflow: hidden;">Analysis</h2>
                                 </div>
                             </a>
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-3 ">
+                        <div class="wrimagecard wrimagecard-topimage" style="text-align:center;">
+                            <a href="https://github.com/dcazenav/PhylEntropy">
+                                <div class="wrimagecard-topimage_header" style="background-color:rgb(50,130,255,0.1);">
+                                    <img style="width:100%;" src="../../static/img/Sans%20titre.png">
+                                    <h4>dcazenav Github</h4>
+                                </div>
+{% comment %}
+                                <a href="https://www.flaticon.com/fr/icones-gratuites/lanalyse-des-donnees" title="l'analyse des donnees icones">L'analyse des donnees icones creees par smashingstocks - Flaticon</a>
+{% endcomment %}
+                                <div class="wrimagecard-topimage_title">
+                                    <h2 style="  white-space: nowrap;">Development</h2>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                     <div class="col-md-2 col-sm-3 ">
                         <div class="wrimagecard wrimagecard-topimage" style="text-align:center;">
