--- a/phylogene_app/templates/phylEntropy/intro.html
+++ b/phylogene_app/templates/phylEntropy/intro.html
@@ -139,7 +139,7 @@
                         <div class="wrimagecard wrimagecard-topimage" style="text-align:center;">
                             <a href="https://github.com/dcazenav/PhylEntropy">
                                 <div class="wrimagecard-topimage_header" style="background-color:rgb(50,130,255,0.1);">
-                                    <img style="width:100%;" src="../../static/img/Sans%20titre.png">
+                                    <img style="width:100%;" src="../../static/img/djangologo.png">
                                     <h4>dcazenav Github</h4>
                                 </div>
 {% comment %}
