--- a/phylogene_app/templates/users/login.html
+++ b/phylogene_app/templates/users/login.html
@@ -16,8 +16,10 @@
     </head>
     {% include 'phylEntropy/navbar.html' %}
 
-    <div class="content-section">
-        <form method="POST">
+    <div class="container-fluid" style="background-color: #ffffff;" >
+        <!--BANDEAU -->
+            <div class="container" id="Page1" style="background-color: #ffffff;">
+        {% comment %}<form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Sign In</legend>
@@ -32,5 +34,60 @@
                 Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
             </small><br>
         </div>
+    </div>{% endcomment %}
+    {% comment %}<form method="post" novalidate>
+    {% csrf_token %}
+    <div class="row">
+      <div class="col-6">
+        {{ form.username|as_crispy_field }}
+      </div>
+      <div class="col-6">
+        {{ form.password|as_crispy_field }}
+      </div>
+    </div>
+    <button type="submit" class="btn btn-success">Save Product</button>
+  </form>{% endcomment %}
+{#         <div class="container">#}
+            <div class="col-lg-12" style="padding-top: 70px;">
+                        <br/>
+                        <br/>
+
+                        <!-- FIN TABULATION -->
+                    <!--PIED DE PAGE -->
+                <div style="text-align: center;">
+                    <table class="footer" width="100%" border="0">
+
+                    </table>
+                </div>
+            </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-auto col-sm-auto">
+                        <h1 style="text-align: center;">Sign up</h1>
+                        <div>
+                            <form method="post">
+                                {%csrf_token%}
+                                {% for error in form.non_field_errors %}
+                                <div class="form-group has-errors text-danger small">
+                                    {{error}}
+                                </div>
+                                {% endfor %}
+
+                                <div class="form-group">
+                                    {{ form.username|as_crispy_field }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.password | as_crispy_field}}
+                                </div>
+                                <button type="submit" class="btn btn-primary" style="width:100%">Login</button>
+                            </form>
+                            <div class="border-top pt-3">
+                                <small class="text-muted">
+                                    Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
+                                </small><br>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </div>
 {% endblock content %}
