--- a/phylogene_app/templates/phylEntropy/intro.html
+++ b/phylogene_app/templates/phylEntropy/intro.html
@@ -106,12 +106,7 @@
                         <br/>
 
                         <!-- FIN TABULATION -->
-
-
-
                     <!--PIED DE PAGE -->
-
-
                 <div style="text-align: center;">
                         <table class="footer" width="100%" border="0">
 
@@ -139,7 +134,7 @@
                         <div class="wrimagecard wrimagecard-topimage" style="text-align:center;">
                             <a href="https://github.com/dcazenav/PhylEntropy">
                                 <div class="wrimagecard-topimage_header" style="background-color:rgb(50,130,255,0.1);">
-                                    <img style="width:100%;" src="../../static/img/djangologo.png">
+                                    <img style="width:100%;" src="../../static/img/github_logo.png">
                                     <h4>dcazenav Github</h4>
                                 </div>
 {% comment %}
