début ajout option multi_piechart_proportionnal.html problème au niveau de la visualisation (en cours de réalisation)

--- a/phylogene_app/templates/phylEntropy/import_data.html
+++ b/phylogene_app/templates/phylEntropy/import_data.html
@@ -199,8 +199,8 @@
                         <div class="tab-pane fade active show" id="genomics">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, "gene.csv" or "pyge.csv" then click on Select All > the option you want to use.</p>
-                            <input id="submit22" name="pyGenomeViz"   class="btn btn-primary" type="submit" value="pyGenomeViz" onclick="this.form.submited=this.value;" >
-                            <input id="submit23" name="pyCircos"   class="btn btn-primary" type="submit" value="pyCircos" onclick="this.form.submited=this.value;" >
+                            <input id="submit23" name="pyGenomeViz"   class="btn btn-primary" type="submit" value="pyGenomeViz" onclick="this.form.submited=this.value;" >
+                            <input id="submit24" name="pyCircos"   class="btn btn-primary" type="submit" value="pyCircos" onclick="this.form.submited=this.value;" >
                        </div>
                         <div class="tab-pane fade" id="graph">
                             <h5 class="card-title">Instructions about how to launch</h5>
@@ -210,6 +210,7 @@
                             <input id="submit3" name="neighbor-joining"   class="btn btn-primary" type="submit" value="Neighbor-Joining" onclick="this.form.submited=this.value;" >
                             <input id="submit12" name="Wordcloud"   class="btn btn-primary" type="submit" value="Wordcloud" onclick="this.form.submited=this.value;" >
                             <input id="submit22" name="Pie Chart"   class="btn btn-primary" type="submit" value="Pie Chart" onclick="this.form.submited=this.value;" >
+                            <input id="submit26" name="Pie Chart with proportion"   class="btn btn-primary" type="submit" value="Pie Chart with proportion" onclick="this.form.submited=this.value;" >
 
                         </div>
                         <div class="tab-pane fade" id="statistics">
@@ -262,7 +263,7 @@
                         <div class="tab-pane fade" id="fuzzylogic">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, use "exemple2.csv" then click on the option you want to use.</p>
-                            <input id="submit24" name="FuzzyWuzzy"   class="btn btn-primary" type="submit" value="FuzzyWuzzy" onclick="this.form.submited=this.value;" >
+                            <input id="submit25" name="FuzzyWuzzy"   class="btn btn-primary" type="submit" value="FuzzyWuzzy" onclick="this.form.submited=this.value;" >
                        </div>
                     </div>
                 </div>
