--- a/phylogene_app/templates/phylEntropy/intro.html
+++ b/phylogene_app/templates/phylEntropy/intro.html
@@ -141,7 +141,7 @@
                                 <a href="https://www.flaticon.com/fr/icones-gratuites/lanalyse-des-donnees" title="l'analyse des donnees icones">L'analyse des donnees icones creees par smashingstocks - Flaticon</a>
 {% endcomment %}
                                 <div class="wrimagecard-topimage_title">
-                                    <h2 style="  white-space: nowrap;">Development</h2>
+                                    <h2 style="  white-space: nowrap;">Dev</h2>
                                 </div>
                             </a>
                         </div>
