--- a/phylogene_app/templates/users/login.html
+++ b/phylogene_app/templates/users/login.html
@@ -62,7 +62,7 @@
             </div>
                 <div class="row justify-content-center">
                     <div class="col-md-auto col-sm-auto">
-                        <h1 style="text-align: center;">Sign up</h1>
+                        <h1 style="text-align: center;">Sign in</h1>
                         <div>
                             <form method="post">
                                 {%csrf_token%}
