modif couleur btn pour réunion recherche

--- a/phylogene_app/templates/phylEntropy/import_data.html
+++ b/phylogene_app/templates/phylEntropy/import_data.html
@@ -199,8 +199,8 @@
                         <div class="tab-pane fade active show" id="genomics">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, "gene.csv" or "pyge.csv" then click on Select All > the option you want to use.</p>
-                            <input id="submit23" name="pyGenomeViz"   class="btn btn-primary" type="submit" value="pyGenomeViz" onclick="this.form.submited=this.value;" >
-                            <input id="submit24" name="CGView"   class="btn btn-primary" type="submit" value="CGView" onclick="this.form.submited=this.value;" >
+                            <input id="submit23" name="pyGenomeViz"   class="btn btn-secondary" type="submit" value="pyGenomeViz" onclick="this.form.submited=this.value;" >
+                            <input id="submit24" name="CGView"   class="btn btn-secondary" type="submit" value="CGView" onclick="this.form.submited=this.value;" >
                        </div>
                         <div class="tab-pane fade" id="graph">
                             <h5 class="card-title">Instructions about how to launch</h5>
@@ -208,7 +208,7 @@
                             <input id="submit1" name="kruskal" class="btn btn-primary" type="submit" value="Minimun Spanning Tree" onclick="this.form.submited=this.value;" >
                             <input id="submit2" name="upgma"   class="btn btn-primary" type="submit" value="UPGMA" onclick="this.form.submited=this.value;" >
                             <input id="submit3" name="neighbor-joining"   class="btn btn-primary" type="submit" value="Neighbor-Joining" onclick="this.form.submited=this.value;" >
-                            <input id="submit12" name="Wordcloud"   class="btn btn-primary" type="submit" value="Wordcloud" onclick="this.form.submited=this.value;" >
+                            <input id="submit12" name="Wordcloud"   class="btn btn-secondary" type="submit" value="Wordcloud" onclick="this.form.submited=this.value;" >
                             <input id="submit22" name="Pie Chart"   class="btn btn-primary" type="submit" value="Pie Chart" onclick="this.form.submited=this.value;" >
                             <input id="submit26" name="Pie Chart with proportion"   class="btn btn-primary" type="submit" value="Pie Chart with proportion" onclick="this.form.submited=this.value;" >
 
@@ -222,21 +222,21 @@
                         <div class="tab-pane fade" id="maps">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, use "exemple2.csv" then click on Select All > the option you want to use.</p>
-                            <input id="submit8" name="Global Map"   class="btn btn-primary" type="submit" value="Global Map" onclick="this.form.submited=this.value;" >
+                            <input id="submit8" name="Global Map"   class="btn btn-warning" type="submit" value="Global Map" onclick="this.form.submited=this.value;" >
                             <input id="submit11" name="Global City Map"   class="btn btn-primary" type="submit" value="Global City Map" onclick="this.form.submited=this.value;" hidden="hidden">
                         </div>
                         <div class="tab-pane fade" id="metrics">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, "exemple2.csv" or "spol43.csv" Select All > then click on the option you want to use.</p>
                             <input id="submit7" name="Entropy"   class="btn btn-primary" type="submit" value="Entropy" onclick="this.form.submited=this.value;" >
-                            <input id="submit9" name="Hunter-Gaston"   class="btn btn-primary" type="submit" value="Hunter-Gaston" onclick="this.form.submited=this.value;" >
-                            <input id="submit10" name="Shannon-Entropy"   class="btn btn-primary" type="submit" value="Shannon-Entropy" onclick="this.form.submited=this.value;" >
+                            <input id="submit9" name="Hunter-Gaston"   class="btn btn-secondary" type="submit" value="Hunter-Gaston" onclick="this.form.submited=this.value;" >
+                            <input id="submit10" name="Shannon-Entropy"   class="btn btn-secondary" type="submit" value="Shannon-Entropy" onclick="this.form.submited=this.value;" >
                        </div>
                         <div class="tab-pane fade" id="machinelearning">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, use "spol43.csv" Select All > then click on the option you want to use.</p>
                             <div class="dropdown text-center">
-                                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">
                                 Supervized Learning
                                 </button>
                                 <div class="dropdown-menu">
@@ -249,7 +249,7 @@
                                     <input id="submit18" name="Nayve Bayes" type="submit" value="Nayve Bayes" onclick="this.form.submited=this.value;" >
                                 </div>
 
-                                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown">
                                 Unsupervized Learning
                                 </button>
                                 <div class="dropdown-menu">
@@ -263,7 +263,7 @@
                         <div class="tab-pane fade" id="fuzzylogic">
                             <h5 class="card-title">Instructions about how to launch</h5>
                             <p class="card-text">To test, use "exemple2.csv" then click on the option you want to use.</p>
-                            <input id="submit25" name="FuzzyWuzzy"   class="btn btn-primary" type="submit" value="FuzzyWuzzy" onclick="this.form.submited=this.value;" >
+                            <input id="submit25" name="FuzzyWuzzy"   class="btn btn-secondary" type="submit" value="FuzzyWuzzy" onclick="this.form.submited=this.value;" >
                        </div>
                     </div>
                 </div>
