ebouche ajout help

--- a/phylogene_app/templates/phylEntropy/import_data.html
+++ b/phylogene_app/templates/phylEntropy/import_data.html
@@ -197,7 +197,7 @@
                 <div class="card-body">
                     <div class="tab-content">
                         <div class="tab-pane fade active show" id="genomics">
-                            <h5 class="card-title">Instructions about how to launch</h5>
+                            <h5 class="card-title">Instructions about how to launch</h5> <i class="fa fa-question-circle fa-spin" style="color: #e01b24;"></i>
                             <p class="card-text">To test, "gene.csv" or "pyge.csv" then click on Select All > the option you want to use.</p>
                             <input id="submit23" name="pyGenomeViz"   class="btn btn-secondary" type="submit" value="pyGenomeViz" onclick="this.form.submited=this.value;" >
                             <input id="submit24" name="CGView"   class="btn btn-secondary" type="submit" value="CGView" onclick="this.form.submited=this.value;" >
