--- a/phylogene_app/templates/graph/multi_piechart_proportionnal.html
+++ b/phylogene_app/templates/graph/multi_piechart_proportionnal.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+                                                    <html>
+                                                        <head>
+                                                          <meta charset="utf-8">
+                                                          <meta name="viewport" content="width=device-width, initial-scale=1">
+                                                          <title>multip</title>
+                                                        </head>
+                                                        <body>
+                                                            <a href="../static/machine_learning/2d6499d4-18ef-44d8-8cd2-39a0e8af77b4.png" download>Link 1</a>                                                      
+
+                                                        </body>
+                                                    </html>
+                                                
