new option (dashbio, django dash) + nouvelle rubrique "other tools" pour analyse sur fasta (alignment, circos et nuclescore)

--- a/phylogene_app/templates/phylEntropy/import_data.html
+++ b/phylogene_app/templates/phylEntropy/import_data.html
@@ -257,6 +257,12 @@
                                     <input id="submit19" name="h_clust" type="submit" value="h_clust" onclick="this.form.submited=this.value;" >
                                     <input id="submit20" name="k_means" type="submit" value="k_means" onclick="this.form.submited=this.value;" >
                                     <input id="submit21" name="clustermap" type="submit" value="clustermap" onclick="this.form.submited=this.value;" >
+                                    <input id="submit27" name="dashclustermap" type="submit" value="dashclustermap" onclick="this.form.submited=this.value;" >
+                                    <input id="submit28" name="testdash" type="submit" value="testdash" onclick="this.form.submited=this.value;" >
+                                    <input id="submit29" name="testheatmapdash" type="submit" value="testheatmapdash" onclick="this.form.submited=this.value;" >
+                                    <input id="submit30" name="testaligmentchartdash" type="submit" value="testaligmentchartdash" onclick="this.form.submited=this.value;" >
+
+
                                 </div>
                             </div>
                         </div>
