--- a/phylogene_app/templates/phylEntropy/navbar.html
+++ b/phylogene_app/templates/phylEntropy/navbar.html
@@ -23,6 +23,10 @@
             </li>
 
             <li class="nav-item">
+                <a class="nav-link" style="color: purple" href="{% url 'other_tools' %}"><i class='fa fa-cog'></i> Other tools</a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" href="{% url 'links' %}"><i class='fa fa-paperclip'></i> Links</a>
             </li>
 
