--- a/phylogene_app/templates/phylEntropy/other_tools.html
+++ b/phylogene_app/templates/phylEntropy/other_tools.html
@@ -60,7 +60,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-2 col-sm-3 ">
                         <div class="wrimagecard wrimagecard-topimage" style="text-align:center;">
-                            <a href="{% url 'phylogene_import' %}">
+                            <a href="{% url 'phylogene_import_other' %}">
                                 <div class="wrimagecard-topimage_header" style="background-color:rgb(50,130,255,0.1);">
                                     <img style="width:100%;" src="../../static/img/genomique.png">
                                     <h4>Alignment on FASTA files</h4>
