--- a/phylogene_app/templates/phylEntropy/other_tools.html
+++ b/phylogene_app/templates/phylEntropy/other_tools.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="col-md-2 col-sm-3 ">
                         <div class="wrimagecard wrimagecard-topimage" style="text-align:center;">
-                            <a href="https://dash.plotly.com/dash-bio/circos">
+                            <a href="{% url 'phylogene_import_other' %}">
                                 <div class="wrimagecard-topimage_header" style="background-color:rgb(50,130,255,0.1);">
                                     <img style="width:100%;" src="../../static/img/genome.png">
                                     <h4>Circos on .json or .csv files</h4>
